2017-08-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc.cc: Remove a line, which I believe is not necessary,
	to avoid a crash for xpdf-4.00.

2017-04-19  Karl Berry  <karl@freefriends.org>

	* mapfile.c (read_field): new parameter buf_size,
	and check buffer for overflow, as in append_char_to_buf.
	(fm_scan_line): change read_field calls;
	set tfm_name to empty string instead of leaving NULL.
	(check_fm_entry): remove checks of tfm_name on every print;
	check for empty tfm_name rather than lack of ps_name and font file;
	check for non-empty tfm_name on slant/extend warnings.

2017-04-12  Karl Berry  <karl@freefriends.org>

	* mapfile.c (check_fm_entry): do not try to print fm->tfm_name,
	etc., in warnings if null.
	(fm_scan_line): goto bad_line if a null tfm_name,
	even if check_fm_entry returns true.

2017-04-12  Pali Roh\'ar <pali.rohar@gmail.com>

	* ptexmac.h (set_subfont, unset_subfont, is_subfont): remove
        these duplicate macros.

2017-03-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

        * writepng.c: Fix the size of memory to allocate when writing
        SMask in write_png_rgb_alpha. Reported by David Fifield:
        http://tug.org/pipermail/pdftex/2017-March/009100.html

2017-03-18  Karl Berry  <karl@tug.org>

        * NEWS,
        * pdftex_version.h,
        * pdftex.web (pdftex_revision, pdftex_version_string):
        version [1.40.]18 for TL17.

2017-02-18  Heiko Oberdiek  <heiko.oberdiek@googlemail.com>

	* pdftex.web (substr_of_str): move earlier.
	(Write out page object): if \MediaBox was given in \pdfpageattr,
	do not output our own.
	Mail from Michael Altmann to pdftex, 9 Feb 2017 13:19:05.
	http://tug.org/pipermail/pdftex/2017-February/009097.html

2017-02-16  Karl Berry  <karl@freefriends.org>

	* regex/regex_internal.h (alloca) [!alloca]: do not try
	to #define if already #defined.
	Report from Vincent Torri on tex-live list, 7 Jul 2016 10:48:15.
	(pdftex r765)

2016-11-05  Karl Berry  <karl@tug.org>
