@@ -1,3 +1,8 @@
+2017-09-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* pdftosrc.cc: Fix a potential bug which I introduced on
+	2017-08-13.
+
 2017-08-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* pdftosrc.cc: Remove a line, which I believe is not necessary,
